fix: sidenav z-index > navbar z-index

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -154,7 +154,7 @@
 
   .sidebar.scrolling {
     top: 0;
-    z-index: 100;
+    z-index: 1031;
   }
 
   .shade.shown {
